search box color changed, gap fixed

--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -1,5 +1,5 @@
 .mail{
-    width: 50%;
+    width: 100%;
     margin-top: 50px;
     background-color: #16161d;
     color: white;
