--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -12,14 +12,17 @@
 }
 
 .listSearch {
-    flex: 1;
-    background-color: #ACE1AF;
-    padding: 10px;
+    background: rgba(130, 174, 210, 0.293);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
     border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    flex: 1;
+    padding: 10px;
     position: sticky;
     top: 10px;
     height: max-content;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .lsTitle{
